styles.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Poppins:ital@1&display=swap');

* {
    font-family: 'Poppins', sans-serif;
}

.title {
    font-family: 'Comfortaa', cursive;
}

body {
    background-image: radial-gradient(circle farthest-corner at 12.3% 19.3%, rgba(85, 88, 218, 1) 0%, rgba(95, 209, 249, 1) 100.2%);
    min-height: 100vh;
}

/* FORM */
form input {
    border-radius: 10px;
    border: none;
    padding: 20px;
    width: 100%;
    outline: none;
    color: grey;
    font-family: monospace;
}

form input:focus {
    outline: 2px solid black;
}

form button {
    font-family: 'Comfortaa', cursive;
    background-color: transparent;
    border-radius: 10px;
    color: white;
    border: 2px solid white;
    transition: 0.3s ease-in-out;
    transition: 0.1s transform ease-in-out;
    width: min-content;
    padding: 10px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

form button:hover {
    color: black;
    background-color: white;
}

form button:active {
    transform: scale(0.95);
}

/* TABLE */
.truth-table {
    display: flex;
    justify-content: center;
    letter-spacing: 3px;
}

table {
    background-color: white;
    color: black;
    border-radius: 10px;
    text-align: center;
    width: 50%;
    opacity: 0;
    transition: opacity 0.6s ease-in-out;
}

thead tr th {
    border-bottom: 1px solid grey;
}

tbody tr:not(:last-child) {
    border-bottom: 1px solid rgb(185, 185, 185);
}

tbody tr {
    transition: 0.15s ease-in-out;
}

tbody tr:hover {
    background-color: rgba(0, 0, 0, 0.151);
    cursor: cell;
}

th,
td {
    font-family: 'Comfortaa', cursive;
    padding: 10px 20px;
}

td.true {
    color: #00A36C;
}

td.false {
    color: #D2042D;
}

/* FOOTER */
footer {
    position: fixed;
    bottom: 0;
    width: 100vw;
    text-align: center;
    background-color: black;
    height: 40px;
    z-index: 999;
}

.footer-space {
    padding-bottom: 60px;
}

/* width */
::-webkit-scrollbar {
    width: 5px;
}

/* Track */
::-webkit-scrollbar-track {
    background: inherit;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555;
}

